[gd_scene load_steps=5 format=3 uid="uid://bm35noykekl47"]

[ext_resource type="Script" uid="uid://db30n7gu3iter" path="res://Scenes/crafter.gd" id="1_0rc8x"]
[ext_resource type="PackedScene" uid="uid://c5bulv574eyq1" path="res://gltbf_exports/crafting_station2.glb" id="2_37sf6"]
[ext_resource type="Script" uid="uid://b5ekdijjme27n" path="res://Scenes/stationlabel.gd" id="3_scdxf"]

[sub_resource type="BoxShape3D" id="BoxShape3D_37sf6"]
size = Vector3(1.18268, 2.32239, 3.27719)

[node name="Crafter" type="StaticBody3D"]
collision_layer = 3
script = ExtResource("1_0rc8x")

[node name="CraftingMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CraftingMenu"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_left = 318.0
offset_top = -114.0
offset_right = 518.0
offset_bottom = 86.0

[node name="Label" type="Label" parent="CraftingMenu/VBoxContainer"]
layout_mode = 2

[node name="ItemList" type="ItemList" parent="CraftingMenu/VBoxContainer"]
layout_mode = 2
auto_width = true
auto_height = true

[node name="CraftButton" type="Button" parent="CraftingMenu/VBoxContainer"]
layout_mode = 2
text = "Craft"

[node name="CloseButton" type="Button" parent="CraftingMenu/VBoxContainer"]
layout_mode = 2
text = "Close"

[node name="crafting_station2" parent="." instance=ExtResource("2_37sf6")]
transform = Transform3D(0.115995, 0, 0, 0, 0.115995, 0, 0, 0, 0.115995, 3.4369, 0, -0.169846)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.814056, -0.337341, 0.423599)
shape = SubResource("BoxShape3D_37sf6")

[node name="Info" type="Label3D" parent="."]
transform = Transform3D(0.17, 0, 0, 0, 0.17, 0, 0, 0, 0.17, 0, 2.96626, 0.193089)
billboard = 1
no_depth_test = true
fixed_size = true
font_size = 24
script = ExtResource("3_scdxf")
